--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 		Loop="true" volume="30" border="100"></embed>
 		<embed src="Video SINGKAT MOTIVASI part 3 -Arti sebuah kerjasama.mp4" width="320" height="240" border =""autoplay="true" hidden="false"
 		Loop="true" volume="30" border="100"></embed> <br> <br>
-		<img src="Zaim.JPG" alt="mybanner" width="120px" height="145" align="center"title="banner">
+		<img src="Zaim.jpg" alt="mybanner" width="120px" height="145" align="center"title="banner">
 </body>
 </html>
